<resources>
    <string name="app_name">MuzTalk</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_jitem_list">Items</string>
    <string name="title_jitem_detail">jItem Detail</string>
    <string name="map_keys" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="app_description">Music connects each other</string>
    <string name="my_room">My Room</string>
    <string name="welcome1">Welcome back,</string>
    <string name="Email">Email</string>
    <string name="Log_in">Log-in</string>
    <string name="new_user">new user? Sign up</string>
    <string name="forget_password">forget password?</string>
    <string name="password">password</string>
    <string name="your_room1">Your Room</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log-out</string>
    <string name="options">options</string>
    <string name="personal_details">Personal Details</string>
    <string name="settings">Settings</string>
    <string name="email_id">Email-id</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="todo">TODO</string>
    <string name="done_button">Done</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="my_music">My Music</string>
    <string name="hey_there">Hey there,</string>
    <string name="username">UserName</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign-up</string>
    <string name="user_gmail">..@gmail.com</string>
    <string name="update_username">Update Username</string>
    <string name="textview">TextView</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="theme">THEME</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="groups">Groups</string>
    <string name="_0">0</string>
    <string name="close">close drawer</string>
    <string name="open">open drawer</string>
    <string name="night_mode">NIGHT MODE</string>
    <!--<string name="map_keys" translatable="false">Enter your google API key here</string>-->

    <string-array name="settings_menu">
        <item>Log-out</item>
        <item>Delete Account</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder tex
        <item>Update Username</item>
        <item>Notifications</item>
        <item>Theme</item>
        <item>invite friend</item>
        <item>Change Password</item>t -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name">song name</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="message">Message…</string>
    <string name="hello">hello</string>
    <string name="delete_all_chats">Delete All chats</string>
    <string name="search_user">Search user</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="users">Users</string>
    <string name="friends">Friends</string>
    <string name="chats">Chats</string>
    <string name="typing">typing...</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="recv_message">recv_message</string>
    <string name="dd_mm_yyyy_min_sec_pm">dd/mm/yyyy min:sec pm</string>
    <string name="delivered_5_00pm">delivered 5:00pm</string>
    <string name="send_message">send message</string>
    <string name="delivered">Delivered</string>
    <string name="stories">Stories</string>
    <string name="profile">Profile</string>
    <string name="last_message">Last message</string>
    <string name="accss">Access to the camera is needed for detection.</string>
</resources>
