<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SigninActivity"
    android:background="@drawable/grad_background">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="249dp"
        android:layout_height="281dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/hey_there"
        android:textColor="#5C5C5C"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

        <EditText
        android:id="@+id/v_emailid"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id"
        android:textColor="#000"
            android:layout_gravity="center"
        android:textStyle="bold"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/v_username"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/a_DOB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/date_format"
        android:inputType="date"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/v_password"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="#000"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/v_confrim_password"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:textColor="#000"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/a_SignUp_button"
        android:layout_width="315dp"
        android:layout_height="43dp"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="#000"

         />


    <!-- <androidx.cardview.widget.CardView
         android:layout_width="185dp"
         android:layout_height="175dp"
         android:layout_marginTop="5dp"
         app:cardCornerRadius="500dp"
         >-->


</LinearLayout>