<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettinglistActivity"
    android:orientation="vertical"
    android:background="@drawable/grad_background">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:shadowColor="#3C7C7474"
        android:shadowDx="-5"
        android:shadowDy="-5"
        android:shadowRadius="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/settings"
        android:textColor="#000"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginLeft="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="100dp" />

    <!--<ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/a_settingList"/>-->


    <Button
        android:id="@+id/a_update_pass"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:layout_marginTop="100dp"
        android:background="#00F4D19D"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/update_username"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/a_notifications"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="#00F4D19D"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/notifications"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/a_theme"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="#00F4D19D"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/theme"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/a_invite_friend"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="#00F4D19D"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/invite_friend"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/a_change_password"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="#00F4D19D"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/change_password"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/a_log_out"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="#00F4D19D"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/log_out"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/a_delete_acc"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="#00F4D19D"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/delete_account"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />




</LinearLayout>