<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/messageLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_gravity="end">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="19sp"
            android:padding="15dp"
            android:textColor="?attr/textColor"
            android:background="@drawable/bg_sender"
            android:text="@string/send_message"
            android:id="@+id/message"
            tools:ignore="RtlSymmetry" />
        <!--<ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/photo_icon"
            android:background="@drawable/bg_sender"
            />-->
            
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="?attr/textColor"
            android:textSize="12sp"
            android:id="@+id/delivr_status"
            android:layout_marginStart="10dp"
            android:text="@string/dd_mm_yyyy_min_sec_pm"
            android:paddingStart="2dp"
            android:visibility="gone"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="?attr/textColor"
            android:textSize="12sp"
            android:id="@+id/timestamp"
            android:layout_marginStart="10dp"
            android:text="@string/delivered"
            android:paddingStart="2dp"
            android:visibility="gone"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

</LinearLayout>