<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserprofileActivity">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="517dp"
        android:background="@drawable/gradient_list"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="185dp"
            android:layout_height="185dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="220dp"
        >

           <!-- <androidx.cardview.widget.CardView
                android:layout_width="185dp"
                android:layout_height="175dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="500dp"
                >-->
            <ImageView
                android:id="@+id/profilepic"
                android:layout_width="180dp"
                android:layout_height="185dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="9dp"
                android:layout_marginRight="20dp"
                android:adjustViewBounds="true"
                android:foregroundGravity="center"
                android:padding="3dp"
                app:srcCompat="@drawable/user_icon"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/todo" />


        </RelativeLayout>


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/a_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/todo"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout"
        android:orientation="horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_baseline_email_24"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/useremail"
                    android:layout_width="219dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/user_gmail"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
